<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/navigation_global"
        android:icon="@drawable/ic_global_black_24dp"
        android:title="@string/title_target"/>
    <item
        android:id="@+id/action_empty"
        android:title=""
        android:checkable="false"
        android:checked="false"
        android:enabled="false"
        />
    <item
        android:id="@+id/navigation_success"
        android:icon="@drawable/ic_round_done_all_24"
        android:title="@string/title_success" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_setting" />

</menu>
